--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Poke-API</title>
 </head>
@@ -14,8 +13,31 @@
       <img src="./src/img/Component 1.png" alt="pokemon">
     </a>
     <input type="text" id="pokemonInput" placeholder="Search Pokemon">
+    <nav>
+      <button type="button">BUG</button>
+      <button type="button">DRAGON</button>
+      <button type="button">ELECTRIC</button>
+      <button type="button">DARK</button>
+      <button type="button">FAIRY</button>
+      <button type="button">GHOST</button>
+      <button type="button">FIGHTING</button>
+      <button type="button">GRASS</button>
+      <button type="button">FIRE</button>
+      <button type="button">GROUND</button>
+      <button type="button">FLYING</button>
+      <button type="button">ICE</button>
+      <button type="button">NORMAL</button>
+      <button type="button">PLANT</button>
+      <button type="button">ROCK</button>
+      <button type="button">STEEL</button>
+      <button type="button">POISON</button>
+      <button type="button">PSYCHIC</button>
+      <button type="button">WATER</button>
+    </nav>
   </header>
-  <main></main>
+  <main>
+    <div id="pokemonList"></div>
+  </main>
 
   <script type="module" src="/src/main.ts"></script>
 </body>
