--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
     </a>
     <input type="text" id="pokemonInput" placeholder="Search Pokemon">
     <nav>
-      <button type="button">BUG</button>
-      <button type="button">DRAGON</button>
-      <button type="button">ELECTRIC</button>
-      <button type="button">DARK</button>
-      <button type="button">FAIRY</button>
-      <button type="button">GHOST</button>
-      <button type="button">FIGHTING</button>
-      <button type="button">GRASS</button>
-      <button type="button">FIRE</button>
-      <button type="button">GROUND</button>
-      <button type="button">FLYING</button>
-      <button type="button">ICE</button>
-      <button type="button">NORMAL</button>
-      <button type="button">PLANT</button>
-      <button type="button">ROCK</button>
-      <button type="button">STEEL</button>
-      <button type="button">POISON</button>
-      <button type="button">PSYCHIC</button>
-      <button type="button">WATER</button>
+      <button class="type-btn bug" type="button">BUG</button>
+      <button class="type-btn dragon" type="button">DRAGON</button>
+      <button class="type-btn electric" type="button">ELECTRIC</button>
+      <button class="type-btn dark" type="button">DARK</button>
+      <button class="type-btn fairy" type="button">FAIRY</button>
+      <button class="type-btn ghost" type="button">GHOST</button>
+      <button class="type-btn fighting" type="button">FIGHTING</button>
+      <button class="type-btn grass" type="button">GRASS</button>
+      <button class="type-btn fire" type="button">FIRE</button>
+      <button class="type-btn ground" type="button">GROUND</button>
+      <button class="type-btn flying" type="button">FLYING</button>
+      <button class="type-btn ice" type="button">ICE</button>
+      <button class="type-btn normal" type="button">NORMAL</button>
+      <button class="type-btn stellar" type="button">STELLAR</button>
+      <button class="type-btn rock" type="button">ROCK</button>
+      <button class="type-btn steel" type="button">STEEL</button>
+      <button class="type-btn poison" type="button">POISON</button>
+      <button class="type-btn psychic" type="button">PSYCHIC</button>
+      <button class="type-btn water" type="button">WATER</button>
     </nav>
   </header>
   <main>
