--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="./src/img/Component 1.png" alt="pokemon">
     </a>
     <input type="text" id="pokemonInput" placeholder="Search Pokemon">
-    <nav>
+    <nav class="type-btns">
       <button class="type-btn bug" type="button">BUG</button>
       <button class="type-btn dragon" type="button">DRAGON</button>
       <button class="type-btn electric" type="button">ELECTRIC</button>
