--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <a href="#">
-      <img src="./src/img/Component 1.png" alt="pokemon">
+      <img src="./src/img/PokemonType 1.png" alt="pokemon">
     </a>
     <input type="text" id="pokemonInput" placeholder="Search Pokemon">
     <nav class="type-btns">
